--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -77,7 +77,7 @@
   --medium-grey: #636363;
   --light-grey: #eeeeee;
   --ash: #f4f4f4;
-  --primary-color: #2b72fb;
+  --primary-colorr: #2b72fb;
   --white: white;
   --border: 1px solid var(--light-grey);
   --shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
@@ -103,7 +103,7 @@ button {
 
 .btn {
   display: block;
-  background-color: var(--primary-color);
+  background-color: var(--primary-colorr);
   color: var(--white);
   text-align: center;
   padding: 0.6rem 1.4rem;
@@ -128,7 +128,7 @@ button {
   justify-content: center;
 }
 
-.container {
+.contain {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -171,14 +171,14 @@ button {
 
 .menu-bar .nav-link:hover,
 .dropdown-link:hover {
-  color: var(--primary-color);
+  color: var(--primary-colorr);
 }
 
 .nav-start,
 .nav-end,
 .menu-bar,
-.right-container,
-.right-container .search {
+.right-contain,
+.right-contain .search {
   display: flex;
   align-items: center;
 }
@@ -247,7 +247,7 @@ button {
     display: block;
   }
 
-  .container {
+  .contain {
     padding: 1.2rem;
   }
 
@@ -317,10 +317,10 @@ button {
 }
 
 @media (max-width: 600px) {
-  .right-container {
+  .right-contain {
     display: none;
   }
-  .container {
+  .contain {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -331,7 +331,7 @@ button {
   }
 }
 @media (max-width: 1440px) {
-  .container {
+  .contain {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -378,7 +378,7 @@ button {
 }
 
 .quick-action {
-  display: inline-flex; /* Use inline-flex to make items inline and flex containers */
+  display: inline-flex; /* Use inline-flex to make items inline and flex contains */
   flex-direction: column; /* Arrange items vertically */
   align-items: center; /* Center items horizontally */
   justify-content: center; /* Center items vertically */
